Fix Xorg wsfb server "Rotate" corruption problem.  PR xsrc/54167

Confirmed on zaurus SL-C1000, SL-C3000 (CW) and hpcarm WS003SH (CCW).
Should be pulled up to netbsd-8 and netbsd-9.